--- a/prog1/index.html
+++ b/prog1/index.html
@@ -14,5 +14,6 @@
   </body>
   <script type="text/javascript" src="utils.js"></script>
   <script type="text/javascript" src="math.js"></script>
+  <script type="text/javascript" src="raycast.js"></script>
   <script type="text/javascript" src="prog1.js"></script>
 </html>
