Part 2 sphere rasterization and shininess added to blinn-phong. Nearly done part 4.

--- a/two/index.html
+++ b/two/index.html
@@ -5,10 +5,11 @@
     <title>Prog 2: Rasterization Shell</title>
 
     <script type="text/javascript" src="gl-matrix-min.js"></script>
+    <script type="text/javascript" src="spheres.js"></script>
     <script type="text/javascript" src="rasterize.js"></script>
   </head>
 
   <body onload="main();">
-    <canvas id="myWebGLCanvas" width="512" height="512"></canvas>
+    <canvas id="myWebGLCanvas" width="1024" height="1024"></canvas>
   </body>
 </html>
