Part 5. Model translation and rotation.

--- a/two/index.html
+++ b/two/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Prog 2: Rasterization Shell</title>
+    <title>Program 2</title>
 
     <script type="text/javascript" src="gl-matrix-min.js"></script>
+    <script type="text/javascript" src="gl-setup.js"></script>
     <script type="text/javascript" src="spheres.js"></script>
     <script type="text/javascript" src="rasterize.js"></script>
   </head>
