Triangle shininess. Camera uses transform.

--- a/two/index.html
+++ b/two/index.html
@@ -6,7 +6,8 @@
 
     <script type="text/javascript" src="gl-matrix-min.js"></script>
     <script type="text/javascript" src="gl-setup.js"></script>
-    <script type="text/javascript" src="spheres.js"></script>
+    <script type="text/javascript" src="camera.js"></script>
+    <script type="text/javascript" src="sphere.js"></script>
     <script type="text/javascript" src="rasterize.js"></script>
   </head>
 
