Multiple lights. several js files.

--- a/two/index.html
+++ b/two/index.html
@@ -5,9 +5,12 @@
     <title>Program 2</title>
 
     <script type="text/javascript" src="gl-matrix-min.js"></script>
-    <script type="text/javascript" src="gl-setup.js"></script>
     <script type="text/javascript" src="camera.js"></script>
-    <script type="text/javascript" src="sphere.js"></script>
+    <script type="text/javascript" src="globals.js"></script>
+    <script type="text/javascript" src="setup.js"></script>
+    <script type="text/javascript" src="model.js"></script>
+    <script type="text/javascript" src="render.js"></script>
+    <script type="text/javascript" src="update.js"></script>
     <script type="text/javascript" src="rasterize.js"></script>
   </head>
 
