Separated dali and frogger.

--- a/four/frogger/index.html
+++ b/four/frogger/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <title>Frogger</title>
     
-<!--     <link type="text/css" rel="stylesheet" href="rasterize.css"> -->
-
-    <script type="text/javascript" src="js/dependencies/gl-matrix-min.js"></script>
-    <script type="text/javascript" src="js/dependencies/cannon.min.js"></script>
-    <script type="text/javascript" src="js/dalí.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <!--     <link type="text/css" rel="stylesheet" href="rasterize.css"> -->
+    <script type="text/javascript" src="../dali/deps/cannon.min.js"></script>
+    <script type="text/javascript" src="../dali/deps/gl-matrix-min.js"></script>
+    <script type="text/javascript" src="../dali/dali.js"></script>
   </head>
 
   <body onload="main();">
