EntityTransform and 3d Camera. Need to finish Shader/ShaderProgram

--- a/four/frogger/index.html
+++ b/four/frogger/index.html
@@ -5,9 +5,7 @@
     <title>Frogger</title>
     
     <!--     <link type="text/css" rel="stylesheet" href="rasterize.css"> -->
-    <script type="text/javascript" src="../dali/deps/cannon.min.js"></script>
-    <script type="text/javascript" src="../dali/deps/gl-matrix-min.js"></script>
-    <script type="text/javascript" src="../dali/dali.js"></script>
+    <script type="text/javascript" src="../dali/dali.min.js"></script>
   </head>
 
   <body onload="main();">
