Rendering engine finally done...

--- a/four/frogger/index.html
+++ b/four/frogger/index.html
@@ -2,15 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Frogger</title>
+    <title>Frogger3D</title>
     
     <!--     <link type="text/css" rel="stylesheet" href="rasterize.css"> -->
     <script type="text/javascript" src="../dali/dali.min.js"></script>
   </head>
 
   <body onload="main();">
-    <div style="display: block; margin: 0 auto;">
-      <canvas id="myWebGLCanvas" width="512" height="512"></canvas>
+    <div style="display: block; margin: auto; text-align: center;">
+      <br />
+      <h3>Frogger3D</h3>
+      <br />
+      <canvas id="myWebGLCanvas" width="1024" height="512" style="display: block; margin: auto;"></canvas>
     </div>
   </body>
 </html>
