Event forwarding. camera switching. cell shading with lights.

--- a/four/frogger/index.html
+++ b/four/frogger/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Frogger3D</title>
     
-    <!--     <link type="text/css" rel="stylesheet" href="rasterize.css"> -->
     <script type="text/javascript" src="../dali/dali.min.js"></script>
   </head>
 
@@ -13,7 +12,7 @@
       <br />
       <h3>Frogger3D</h3>
       <br />
-      <canvas id="myWebGLCanvas" width="512" height="512" style="display: block; margin: auto;"></canvas>
+      <canvas id="glCanvas" width="512" height="512" style="display: block; margin: auto;"></canvas>
     </div>
   </body>
 </html>
