--- a/four/frogger/index.html
+++ b/four/frogger/index.html
@@ -12,6 +12,10 @@
       <br />
       <h3>Frogger3D</h3>
       <br />
+      <div id='scoreboard'>
+
+      </div>
+      <br />
       <canvas id="glCanvas" width="512" height="512" style="display: block; margin: auto;"></canvas>
     </div>
   </body>
